:bug: Fixed clicks wrap duplicate, minor style changes

--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -94,7 +94,7 @@ input {
 		line-height: 50px;
 		font-size: 50px;
 		height: 50px;
-		padding: 2px 10px 2px 30px;
+		padding: 2px 15px 2px 30px;
 		border-radius: 10px;
 		transition: opacity 0.2s, background-color 0.2s;
 
@@ -217,6 +217,7 @@ input {
 		.setting.sound .css-waves svg path,
 		.setting .range-wrap .inner-range,
 		.click.on,
+		.click,
 		.wheel {
 			transition: none;
 		}
