--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -19,7 +19,7 @@
 		overflow: hidden;
 		z-index: 20;
 		font-size: 12px;
-		font-weight: 600;
+		font-weight: 500;
 
 		&.shown {
 			.inner {
