--- a/src/styles/layers.scss
+++ b/src/styles/layers.scss
@@ -39,7 +39,7 @@
 		svg {
 			width: 60px;
 			height: 60px;
-			padding: 0 15px;
+			padding: 0 20px;
 			border-radius: 8px;
 			cursor: pointer;
 			transition: background-color 0.3s;
